welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:6: error: '{' expected but 'case' found.
     match case nbBiscuits >= 3 => gauche();
           ^Poucet:7: error: illegal start of statement
     match case nbBiscuits <= 2 => droite(); }
     ^